[gd_scene load_steps=2 format=3 uid="uid://blv3mpi5ax00q"]

[ext_resource type="Script" path="res://src/ui/effect_item.gd" id="1_ti0ek"]

[node name="EffectItem" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_ti0ek")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Padding" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VisibilityButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"VisibilityButton"
toggle_mode = true
action_mode = 0

[node name="Icon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Effect"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_right = 5

[node name="PropertyList" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
